Fix position of CustomAlert and hover behaviour on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  width: 99%;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,7 +15,7 @@ code {
 }
 
 .hidden {
-  display:none;
+  display: none;
 }
 
 h1 {
@@ -39,17 +40,12 @@ h1 {
   border-radius: 8px;
 }
 
-.card:hover {
-  border-width: 3px;
-  box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
 .selected {
   border-width: 3px;
 }
 
 .svg-shapes-box {
-  margin-top:1rem;
+  margin-top: 1rem;
 }
 
 .button-wrapper, .table-wrapper {
@@ -86,11 +82,6 @@ h1 {
   background-color: white; 
 }
 
-.button:hover{ 
-  box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  color: white;
-}
-
 .toggle-rules {
   border: 2px solid #4CAF50;
 }
@@ -99,10 +90,6 @@ h1 {
   border: 2px solid #4CAF50;
   background-color: #4CAF50;
   color: white;
-}
-
-.toggle-rules:hover {
-  background-color: #4CAF50;
 }
 
 .toggle-stats {
@@ -115,17 +102,10 @@ h1 {
   color: white;
 }
 
-.toggle-stats:hover {
-  background-color: #7f20d8;
-}
-
 .noSet {
   border: 2px solid #d82020;
 }
 
-.noSet:hover {
-  background-color: #d82020;
-}
 .long{
   display: none;
 }
@@ -146,23 +126,12 @@ h1 {
   animation-duration: 3s;
 }
 
-.reload {
+.reload, .reload:active{
   border: 2px solid yellowgreen;
 }
 
-
-
 .hint {
   border: 2px solid yellow;
-}
-
-.hint:hover {
-  background-color: yellow;
-  color: black;
-}
-
-.hint:disabled {
-  background-color: yellow;
 }
 
 .row {
@@ -219,11 +188,11 @@ footer {
   color:dimgray;
 }
 
-.icon{
+.icon {
  margin: 0 2rem 0 2rem;
 }
 
-.score-wrapper{
+.score-wrapper {
   position:relative;
   top:-50%;
   left:40%;
@@ -236,12 +205,13 @@ footer {
   font-size: 1.4rem;
   cursor: default;
 }
-.animate{
+
+.animate {
   animation:scoresUp;
   animation-duration: 3s;
 }
 
-@keyframes scoresUp{
+@keyframes scoresUp {
   10%{
     opacity: 1;
   }
@@ -257,7 +227,8 @@ footer {
   left: 35%;
   opacity: 0;
 }
-.lastTime{
+
+.lastTime {
   position: absolute;
   font-size: 1.6rem;
   color: green;
@@ -268,7 +239,8 @@ footer {
   animation-name: timeFlies;
   animation-duration: 5s;
 }
-@keyframes timeFlies{
+
+@keyframes timeFlies {
   10% {
     opacity: 1;
   }
@@ -279,18 +251,13 @@ footer {
 }
 
 .alert-wrapper {
-	position:absolute;
-	top:0;
-	left:0;
-	width: 100%;
-	z-index:1;
-	height: 100%;
+  position:relative;
+  top: 20px;
 }
 
-.alert-relative {
-	position: relative;
-	left: 50%;
-	top: 36%;
+.alert-absolute {
+  position: absolute;
+  left: 50%;
 	margin-left: -125px;
 	padding: 15px;
 	width: 220px;
@@ -337,141 +304,174 @@ footer {
 .hidden {
   display: none;
 }
+
 .success {
 	background-color: #00C653;
 }
-.failedAttempt{
+
+.failedAttempt {
   background-color:red;
 }
-.noSetFail{
+
+.noSetFail {
   background-color:  #d82020;
 }
-.alert-main{
+.alert-main {
   font-size: 1.3rem;
 }
-.alert-additional{
+
+.alert-additional {
   font-size: 0.9rem;
 }
 
 @media only screen and (min-device-width: 450px) {
-  #root{
+  #root {
     width: 450px;
   }
-  footer{
+
+  footer {
     width:450px;
   }
-  .card{
+
+  .card {
     height: 6rem;
     margin: 5px 5px 5px 5px;
   }
-  .card:hover, .selected {
+
+  .selected {
     border-width: 4px;
   }
+
   .button {
     margin: 0 0.2rem 0 0.2rem;
     transition-duration: 0.4s;
     font-size: 0.68rem;
     padding: 7px 14px;
   }
-  .long{
+  
+  .long {
     display: inline;
   }
-  .short{
+
+  .short {
     display: none;
   }
+
   .stats {
     font-size: 1rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
+
   .first {
     margin-left: 0.5rem;
   }
-  .score-wrapper{
+
+  .score-wrapper {
     left:35%;
   }
+
   .scorePoint{
     font-size: 2.1rem;
   }
-  .time-wrapper{
+
+  .time-wrapper {
     left: 36%;
   }
-  .lastTime{
+
+  .lastTime {
     font-size: 2.1rem;
   }
 
-  .alert-relative {
-    top: 38%;
+  .alert-absolute {
+    left: 50%;
     margin-left: -145px;
     padding: 20px;
     width: 250px;
   }
+
   .alert-main {
     font-size: 1.4rem;
   }
+
   .alert-additional {
     font-size: 1rem;
   }
+
   .alert-btn {
     height: 33px;
     width: 120px;
     margin-top: 10px;
   }
 }
+
 @media only screen and (min-device-width: 550px) {
-  #root{
+  #root {
     width: 550px;
   }
-  footer{
+
+  footer {
     width: 550px;
   }
-  .card{
+
+  .card {
     height: 7rem;
   }
+
   .button {
     margin: 0 0.3rem 0 0.3rem;
     transition-duration: 0.4s;
     font-size: 0.85rem;
     padding: 8px 16px;
   }
+
   .rules {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     font-size: 1rem;
   }
-  .important{
+
+  .important {
     font-size: 1.1rem;
   }
+
   .stats {
     font-size: 1.1rem;
     margin-left: 1rem;
     margin-right: 0.5rem;
   }
-  .score-wrapper{
+
+  .score-wrapper {
     left:35%;
   }
-  .scorePoint{
+
+  .scorePoint {
     font-size: 2.6rem;
   }
-  .time-wrapper{
+
+  .time-wrapper {
     left: 36%;
   }
-  .lastTime{
+
+  .lastTime {
     font-size: 2.6rem;
   }
-  .alert-relative {
+
+  .alert-absolute {
     left: 50%;
-    top: 41%;
     margin-left: -145px;
     padding: 20px;
     width: 250px;
   }
+
   .alert-main {
     font-size: 1.5rem;
   }
+
   .alert-additional {
     font-size: 1rem;
   }
+
   .alert-btn {
     height: 35px;
     width: 120px;
@@ -480,54 +480,98 @@ footer {
 }
 
 @media only screen and (min-device-width: 650px) {
-  #root{
+  #root {
     width: 650px;
   }
-  footer{
+
+  footer {
     width:650px;
   }
-  .card{
+
+  .card {
     height: 8rem;
   }
+
   .button {
     margin: 0 0.5rem 0 0.5rem;
     font-size: 1rem;
   }
+
   .stats {
     font-size: 1.3rem;
     margin-left: 1.5rem;
     margin-right: 0.5rem;
   }
-  .scorePoint{
+
+  .scorePoin {
     font-size: 3rem;
   }
-  .time-wrapper{
+
+  .time-wrapper {
     left: 36%;
   }
-  .lastTime{
+
+  .lastTime {
     font-size: 3.3rem;
   }
 
-  .alert-relative {
+  .alert-absolute {
     left: 50%;
-    top: 43%;
     margin-left: -170px;
     padding: 20px;
     width: 300px;
   }
+
   .alert-main {
       font-size: 1.5rem;
   }
+
   .alert-additional {
       font-size: 1rem;
   }
+
   .alert-btn {
     height: 40px;
     width: 130px;
     margin-top: 20px;
   }
+}
+
+@media (hover: hover) and (pointer: fine) {
+
+  .card:hover {
+    border-width: 4px;
+    box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  .button:hover{ 
+    box-shadow: 0 10px 13px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    color: white;
+  }
+
+  .toggle-rules:hover {
+    background-color: #4CAF50;
+  }
+
+  .toggle-stats:hover {
+    background-color: #7f20d8;
+  }
+
+  .noSet:hover {
+    background-color: #d82020;
+  }
+
   .reload:hover {
     background-color: yellowgreen;
+  }
+
+  .hint:hover {
+    background-color: yellow;
+    color: black;
+  }
+  
+  .hint:disabled {
+    background-color: yellow;
   }
 }
 
